--- a/main.css
+++ b/main.css
@@ -1,30 +1,40 @@
 @font-face {
-    font-family: Cinzel;
-    src: url(fonts/CinzelVariable.ttf);
-  }  
+	font-family: Cinzel;
+	src: url(fonts/CinzelVariable.ttf);
+}
+
+.maindiv {
+	visibility: collapse;
+	opacity: 0;
+	transition: opacity 0.5s;
+}
 
 body {
-    display: flex;
-    background-color: black;
-    justify-content: center;
-    align-items: center;
-    height:100vh;
-    margin: 0;
-    padding: 0;
+	color: rgba(255, 255, 255, 0.9);
+	display: flex;
+	background-color: black;
+	justify-content: center;
+	align-items: center;
+	height: 100vh;
+	margin: 0;
+	padding: 0;
+}
+
+.landingdiv {
+	transition: opacity 0.5s;
+	z-index: 100;
 }
 
 .landing {
-    text-align: center;
-
-    font-family: Cinzel;
-    color: rgba(180, 180, 180,0.8);
-    text-shadow: 0px 0px 4px white;
-    font-size: 1.5em;
-    
-    transition: font-size 0.5s, color 0.15s linear;
+	text-align: center;
+	font-family: Cinzel;
+	color: rgba(180, 180, 180, 0.8);
+	text-shadow: 0px 0px 4px white;
+	font-size: 1.5em;
+	transition: font-size 0.5s, color 0.15s linear;
 }
 
-.landing:hover{
-    color:rgba(255, 255, 255, 0.9);
-    font-size: 1.55em;
+.landing:hover {
+	color: rgba(255, 255, 255, 0.9);
+	font-size: 1.55em;
 }
