--- a/main.css
+++ b/main.css
@@ -43,7 +43,6 @@
 	opacity: 0;
 	margin: 0 auto;
 	display: flex;
-
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
@@ -58,6 +57,8 @@
 	font-family: DarkSouls;
 	color: rgb(194, 194, 194);
 	transition: color 0.3s, filter 0.3s linear;
+	user-select: none;
+	-moz-user-select: none;
 }
 
 .maindiv label:hover {
@@ -97,6 +98,8 @@ body {
 	text-shadow: 0px 0px 4px white;
 	font-size: 1.6em;
 	transition: font-size 0.5s, color 0.15s linear;
+	user-select: none;
+	-moz-user-select: none;
 }
 
 .landingjp {
@@ -107,6 +110,8 @@ body {
 	font-size: 1.3em;
 	transition: font-size 0.5s, color 0.15s linear;
 	font-family: Zen_JP;
+	user-select: none;
+	-moz-user-select: none;
 }
 
 .landingdiv:hover .landingjp {
