--- a/main.css
+++ b/main.css
@@ -86,7 +86,7 @@ body {
 	left: 50%;
 	top: 50%;
 	transform: translate(-50%, -50%);
-	transition: opacity 0.5s;
+	transition: opacity 0.8s ease-in;
 	z-index: 100;
 }
 
