--- a/main.css
+++ b/main.css
@@ -88,6 +88,10 @@
 	opacity: 0;
 	margin: 0 auto;
 	display: flex;
+
+	left: 50%;
+	top: 50%;
+	transform: translate(-50%, -50%);
 	position: absolute;
 	flex-direction: column;
 	align-items: center;
